--- a/configuration.yaml
+++ b/configuration.yaml
@@ -155,6 +155,12 @@ scene:
         brightness_pct: 70
         transition: 10
 
+input_boolean:
+  sarah_knitting:
+    name: Sarah Knitting
+    initial: off
+    icon: mdi:human-female
+
 
 device_sun_light_trigger:
   light_group: group.living_room
